--- a/ServerCreation/views/layouts/main-layout.pug
+++ b/ServerCreation/views/layouts/main-layout.pug
@@ -15,5 +15,4 @@ html(lang="en")
                         a(href="/") Shop
                     li.main-header__item
                         a(href="/admin/add-product") Add Product
-        main
-            h1 Page Not Found
+        block content
