Template engine HW done

--- a/NodeJS Complete Guide/HW/04HwTemplateEngine/views/car-add.ejs
+++ b/NodeJS Complete Guide/HW/04HwTemplateEngine/views/car-add.ejs
@@ -1,5 +1,10 @@
 <%- include('partials/header') %> 
 
     <h1>Add new Car:</h1>
+    <form action="/admin/addCar/" method="POST">
+      <label for="carName">Car name</label>
+      <input type="text" name="carName" id="carName">
+      <input type="submit" value="submit">
+    </form>
   </body>
 </html>
