--- a/NodeJS Complete Guide/HW/04HwTemplateEngine/views/car.ejs
+++ b/NodeJS Complete Guide/HW/04HwTemplateEngine/views/car.ejs
@@ -1,5 +1,8 @@
 <%- include ("partials/header") %> 
 
     <h1 class="uglyColor">List of cars:</h1>
+    <% cars.forEach( carName => {%> 
+        <p><%= carName %> </p>
+      <% }) %> 
   </body>
 </html>
